# new.ytui-music

./: Cargo.toml  README.md  layout.json
drawer/: Cargo.toml
drawer/src/: lib.rs  main.rs
drawer/src/event/: mod.rs
drawer/src/examples/: common.rs  gauge.rs  musicpane.rs  playlistpane.rs  searchbar.rs  shortcut.rs  tabpane.rs  ui.rs
drawer/src/gadgets/: gauge.rs  mod.rs  musicpane.rs  panetab.rs  playlistpane.rs  searchbar.rs  shortcut.rs  ui.rs
drawer/src/init/: config.rs  mod.rs  terminal.rs
drawer/src/types/: action.rs  mod.rs  query.rs  state.rs  unit.rs  utils.rs  window.rs
examples/: Cargo.toml
examples/gadgets/: common.rs  musicpane.rs  playlistpane.rs  shortcut.rs  tabpane.rs  ui.rs
layout/: Cargo.toml
layout-config/: Cargo.toml  layout.json
layout-config/src/: direction.rs  identifier.rs  item.rs  length.rs  lib.rs  popup.rs  size.rs  ui.rs  window.rs
layout/src/: extend_config.rs  lib.rs  main.rs  rect.rs  rect_computation.rs
res/: default-config.json
src/: direction.rs  identifier.rs  item.rs  layout.rs  length.rs  main.rs  popup.rs  size.rs  ui.rs  window.rs
user-config/: Cargo.toml
user-config/src/: action.rs  keyboard.rs  lib.rs
user-config/src/preferences/: mod.rs  pane.rs  pane_tab.rs  searchbar.rs  shortcut.rs  theme.rs
user-config/src/styles/: color.rs  keycode.rs  mod.rs
