[package]
name = "drawer"
version = "0.1.0"
edition = "2021"

[dependencies]
layout-config = { path = "../layout-config/" }
layout = { path = "../layout/" }
crossterm = { version = "0.20", features = ["event-stream"] }
tui = { version = "0.16", features = ["crossterm"], default-features = false }
serde_json = "1"
