[package]
name = "drawer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drawer"
path = "src/main.rs"

[lib]
name = "drawer"
path = "src/main.rs"

[dependencies]
user-config = { path = "../user-config/" }
crossterm = { version = "0.20", features = ["event-stream"], optional =  true }
termion = { version = "1.5", optional = true }
tui = { version = "0.16" }
serde_json = "1"
dirs = "4.0.0"

[features]
default = ["crossterm"]
crossterm = ["tui/crossterm", "dep:crossterm"]
termion = ["tui/termion", "dep:termion"]
