[package]
name = "layout"
version = "0.1.0"
edition = "2021"

[lib]
name = "layout"
path = "src/lib.rs"

[[bin]]
name = "layout"
path = "src/main.rs"

[dependencies]
layout-config = { path = "../layout-config/" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
user-config = { path = "../user-config" }
